force-app/main/default/objects/IntegrationSystem__c/IntegrationSystem__c.object-meta.xml
<CustomObject>
    <description>External ERP/CRM system configured for ErpSync.</description>
    <label>Integration System</label>
    <nameField>
        <label>Integration System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>