force-app/main/default/objects/IntegrationSystem__c/fields/ApiLimitPerDay__c.field-meta.xml
<CustomField>
    <fullName>ApiLimitPerDay__c</fullName>
    <label>API Limit Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>