force-app/main/default/objects/IntegrationSystem__c/fields/ConnectorType__c.field-meta.xml
<CustomField>
    <fullName>ConnectorType__c</fullName>
    <label>Connector Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generic REST</fullName>
                <default>true</default>
                <label>Generic REST</label>
            </value>
            <value>
                <fullName>Odoo</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Brevo</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics 365</fullName>
            </value>
            <value>
                <fullName>Business Central</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Oracle NetSuite</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>QuickBooks</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
            <value>
                <fullName>Pipedrive</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>WooCommerce</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Mailchimp</fullName>
            </value>
            <value>
                <fullName>Klaviyo</fullName>
            </value>
            <value>
                <fullName>Zendesk</fullName>
            </value>
            <value>
                <fullName>Freshdesk</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Notion</fullName>
            </value>
            <value>
                <fullName>Airtable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>