force-app/main/default/objects/IntegrationSystem__c/fields/DefaultBatchSize__c.field-meta.xml
<CustomField>
    <fullName>DefaultBatchSize__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Default Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>