force-app/main/default/objects/IntegrationSystem__c/fields/LastConnectionCheckAt__c.field-meta.xml
<CustomField>
    <fullName>LastConnectionCheckAt__c</fullName>
    <label>Last Connection Check At</label>
    <type>DateTime</type>
</CustomField>