force-app/main/default/objects/IntegrationSystem__c/fields/LastConnectionStatus__c.field-meta.xml
<CustomField>
    <fullName>LastConnectionStatus__c</fullName>
    <label>Last Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Tested</fullName>
                <default>true</default>
                <label>Not Tested</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>