force-app/main/default/objects/IntegrationSystem__c/fields/LastSuccessfulSync__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessfulSync__c</fullName>
    <label>Last Successful Sync</label>
    <type>DateTime</type>
</CustomField>