force-app/main/default/objects/IntegrationSystem__c/fields/NamedCredentialName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialName__c</fullName>
    <label>Named Credential Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>