force-app/main/default/objects/IntegrationSystem__c/fields/OwnerFunctional__c.field-meta.xml
<CustomField>
    <fullName>OwnerFunctional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functional Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Functional Integration Systems</relationshipLabel>
    <relationshipName>FunctionalIntegrationSystems</relationshipName>
    <type>Lookup</type>
</CustomField>