force-app/main/default/objects/IntegrationSystem__c/fields/OwnerTechnical__c.field-meta.xml
<CustomField>
    <fullName>OwnerTechnical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Technical Integration Systems</relationshipLabel>
    <relationshipName>TechnicalIntegrationSystems</relationshipName>
    <type>Lookup</type>
</CustomField>